[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
tokio = {version = "1", features = ["time", "rt"], optional = true}
async-std = {version = "1", optional = true}

[features]
default = ["rt-tokio"]

# Run `cargo t` to test this feature
rt-tokio = ["tokio"]

# Run `cargo t --features rt-async-std --no-default-features` to test this feature
rt-async-std = ["async-std"]

[dev-dependencies]
tokio = {version = "1", features = ["time", "rt", "rt-multi-thread", "macros"]}
